@@ -10,6 +10,11 @@ What's New in Python 3.7.0 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #28799: Remove the ``PyEval_GetCallStats()`` function and deprecate
+  the untested and undocumented ``sys.callstats()`` function. Remove the
+  ``CALL_PROFILE`` special build: use the :func:`sys.setprofile` function,
+  :mod:`cProfile` or :mod:`profile` to profile function calls.
+
 - Issue #12844: More than 255 arguments can now be passed to a function.
 
 - Issue #28782: Fix a bug in the implementation ``yield from`` when checking
